# wavy-totem-lib

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  qodana.yml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-docs.yml  docs.yml  lint.yml  publish.yml
docs/: astro.config.mjs  conf.py  docusaurus.config.ts  getting_started.rst  index.rst  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json  wrangler.toml
docs/Writerside/: c.list  redirection-rules.xml  w.tree  writerside.cfg
docs/Writerside/cfg/: buildprofiles.xml
docs/Writerside/codeSnippets/: example.py
docs/Writerside/codeSnippets/skin/: create.py  create_bytes.py  methods.py
docs/Writerside/topics/: Concepts.md  Overview.topic  Skin.md  getting-started.md
docs/concepts/: builder.rst  skin.rst  styles.rst  totem.rst
docs/docs/: advanced.md  contributing.md  examples.md  getting-started.mdx  hello.md  intro.md
docs/docs/concepts/: _category_.json  builder.md  skin.md  style.md  totem.md
docs/public/: _headers  robots.txt
docs/src/components/HomepageFeatures/: index.tsx
docs/src/content/docs/: getting-started.mdx  index.mdx
docs/src/content/docs/concepts/: builder.md  pattern.mdx  skin.mdx  totem.md
docs/src/content/docs/en/: getting-started.mdx  index.mdx
docs/src/content/docs/en/concepts/: builder.md  pattern.mdx  skin.mdx  totem.md
docs/src/content/docs/en/guides/: writing-pattern.mdx  (+2 more)
docs/src/content/docs/guides/: downloading-the-skin.mdx  generating-a-totem.mdx  writing-pattern.mdx
docs/src/content/docs/ru/: getting-started.mdx  index.mdx
docs/src/pages/: index.astro
totem_lib/: __init__.py
wavy_totem_lib/: __init__.py  aio.py  async.py  builder.py  exceptions.py  layers.py  options.py  skin.py  sync.py  totem.py
wavy_totem_lib/patterns/: __init__.py  abstract.py  soul.py  wavy.py
wavy_totem_lib/styles/: abstract.py  soul.py  wavy.py
(+7 files in other folders)
