[tool.poetry]
name = "wavy-totem-lib"
version = "2.1.2"
description = "A library for generating the texture of Minecraft's Totem of Undying"
authors = ["WavyCat <me@wavycat.ru>"]
readme = "README.md"
license = "BSL-1.0"
homepage = "https://github.com/wavy-cat/wavy-totem-lib"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Issue tracker" = "https://github.com/wavy-cat/wavy-totem-lib/issues"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff]
target-version = "py310"
